fixed z-index

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 
 *{
   box-sizing: border-box;
+  z-index: 3;
 }
 
 html, body {
